Bump version to flyway-12.10.0
Please see the GH release for the release notes

Add keepAlive container reuse semantics to the smart docker provisioner
Skip non-existent callback locations instead of failing or erroring
Report the effective working directory when a filesystem location is not found
Log out-of-order mode at info level instead of as a warning